name:                  ambiata-zodiac
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-zodiac
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-zodiac

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-tinfoil
                     , ambiata-x-eithert
                     , attoparsec                      >= 0.10 && < 0.13
                     , base16-bytestring               == 0.1.1.*
                     , bytestring                      >= 0.10.4     && < 0.10.7
                     , case-insensitive                == 1.2.*
                     , containers                      == 0.5.*
                     , data-default-class              == 0.0.*
                     , deepseq-generics                == 0.2.0.*
                     , http-client                     == 0.4.18.*
                     , http-types                      == 0.9.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.5        && < 1.7
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_zodiac
                       Zodiac
                       Zodiac.Data
                       Zodiac.Data.Error
                       Zodiac.Data.Key
                       Zodiac.Data.Protocol
                       Zodiac.Data.Request
                       Zodiac.Data.Symmetric
                       Zodiac.Data.Time
                       Zodiac.MAC
                       Zodiac.Request
                       Zodiac.Request.HttpClient
                       Zodiac.Symmetric
                       Zodiac.Time

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tinfoil
                     , ambiata-zodiac
                     , bytestring                      >= 0.10.4     && < 0.10.7
                     , containers                      == 0.5.*
                     , http-types                      == 0.9.*
                     , quickcheck-instances            == 0.3.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.5        && < 1.7
                     , transformers                    >= 0.4        && < 0.6

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tinfoil
                     , ambiata-zodiac
                     , bytestring                      >= 0.10.4     && < 0.10.7
                     , containers                      == 0.5.*
                     , http-types                      == 0.9.*
                     , quickcheck-instances            == 0.3.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.5        && < 1.7
                     , transformers                    >= 0.4        && < 0.6


