name:                  ambiata-zodiac-export
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-zodiac-export
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-zodiac-export

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-zodiac-core
                     , ambiata-x-eithert
                     , bytestring                      >= 0.10.4     && < 0.10.7
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_zodiac_export
                       Zodiac.Export.Key
                       Zodiac.Export.TSRP
