name:                  ambiata-zodiac-raw
version:               0.0.1
license:               Apache-2.0
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-zodiac-raw
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-zodiac-raw

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-hadron-core
                     , ambiata-p
                     , ambiata-tinfoil
                     , ambiata-x-bytestring
                     , ambiata-zodiac-core
                     , ambiata-zodiac-tsrp
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , deepseq-generics                == 0.2.0.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.5        && < 1.7
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Zodiac.Raw
                       Zodiac.Raw.Error
                       Zodiac.Raw.Request
                       Zodiac.Raw.TSRP

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-hadron-core
                     , ambiata-p
                     , ambiata-tinfoil
                     , ambiata-tinfoil-test
                     , ambiata-zodiac-core
                     , ambiata-zodiac-core-test
                     , ambiata-zodiac-raw
                     , ambiata-zodiac-tsrp
                     , ambiata-zodiac-tsrp-test
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , quickcheck-instances            == 0.3.*
                     , random                          == 1.1.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.5        && < 1.7
                     , transformers                    >= 0.4        && < 0.6

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-hadron-core
                     , ambiata-p
                     , ambiata-tinfoil
                     , ambiata-tinfoil-test
                     , ambiata-zodiac-core
                     , ambiata-zodiac-core-test
                     , ambiata-zodiac-raw
                     , ambiata-zodiac-tsrp
                     , ambiata-zodiac-tsrp-test
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , quickcheck-instances            == 0.3.*
                     , random                          == 1.1.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.5        && < 1.7
                     , transformers                    >= 0.4        && < 0.6
