name:                  ambiata-zodiac-tsrp-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.7        && < 2.9
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tinfoil
                     , ambiata-tinfoil-test
                     , ambiata-zodiac-core
                     , ambiata-zodiac-core-test
                     , ambiata-zodiac-tsrp
                     , bytestring                      >= 0.10.4     && < 0.11
                     , containers                      == 0.5.*
                     , http-client                     == 0.4.18.*
                     , http-types                      >= 0.8        && < 0.10
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , random                          == 1.1.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.5        && < 1.7
                     , transformers                    >= 0.4        && < 0.6

  exposed-modules:
                       Test.Zodiac.TSRP.Arbitrary
